--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(serial)
 
-# Find catkin
+
 add_compile_options(-std=c++11)
 add_compile_options(-o2)
 add_compile_options(-march=native)
@@ -14,23 +14,25 @@ include_directories(include)
 set(serial_SRCS
     src/serial.cc
     include/serial/serial.h
-    include/serial/v8stdint.h )
+    include/serial/v8stdint.h)
 
-list(APPEND serial_SRCS src/impl/win.cc)
-list(APPEND serial_SRCS src/impl/list_ports/list_ports_win.cc)
+list(APPEND serial_SRCS src/impl/unix.cc)
+list(APPEND serial_SRCS src/impl/list_ports/list_ports_linux.cc)
 
 ## Build Serial library
 add_library(${PROJECT_NAME} ${serial_SRCS})
 
-## Include windows API
-target_link_libraries(${PROJECT_NAME} setupapi)
+## Include linux API
+target_link_libraries(${PROJECT_NAME} rt pthread)
 
 ## Source
 set(SRCS
         src/Packet/Packet.cpp
         src/Packet/HostPacket.cpp
         src/Packet/MemoryStream.cpp
-        src/Crc.cpp)
+        src/Crc.cpp
+        src/TOF200H.cpp
+        src/crc16.c)
 
 add_executable(Test main.cpp ${SRCS})
 
